# CogniQ

./: .dockerignore  .env.example  .envrc.example  .envrc.sample  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  config.py  docker-compose.yml  main.py  manifest.ts  multiple_personalities.py  pyproject.toml  release.config.js  single.py
.devcontainer/: devcontainer.json  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: _auto_lint.yml  _build.yml  _deploy.yml  auto_lint.yml  deno.yml  on_pull_request.yml  on_push.yml  on_push_build.yml
alembic/: env.py  script.py.mako
alembic/versions/: 2023_10_06_0431_951bc545b4af_create_installation_store_create_state_.py  2023_10_06_0628_4ee29c019291_create_slack_oauth_states.py  2023_10_13_0504_5713291372c4_create_tasks.py
cogniq/: __init__.py  config.py
cogniq/anthropic/: slack_history.py
cogniq/bing/: __init__.py  api.py  search.py
cogniq/bing/parse/: search_response.py
cogniq/bing/search_results/: news_response.py
cogniq/bing_search/: __init__.py  ask_openai.py  bing_search.py  config.py
cogniq/bots/bing_search/: __init__.py  ask_openai.py  config.py  default_config.py  start.py  web_retriever.py
cogniq/bots/chat_anthropic/: __init__.py  ask.py  chat.py  config.py
cogniq/bots/chat_gpt4/: __init__.py  ask_openai.py  chat_gpt4.py
cogniq/chat_gpt4/: ask_openai.py  chat_gpt4.py
cogniq/connectors/bing/: __init__.py  bing.py  config.py  search.py
cogniq/connectors/bing/search_results/: __init__.py  news.py  news_response.py  search_response.py  search_results.py  webpage.py
cogniq/connectors/serpapi/: config.py  serpapi.py
cogniq/connectors/slack/: app_home_opened.py  app_mention.py  ask_openai.py  conversations_history.py  conversations_replies.py  history.py  message.py  retrieval_strategy.py  slack.py
cogniq/logging/: __init__.py  config.py  logging.py
cogniq/models/openai/: __init__.py  api.py  async_chat_completion_create.py  best_search_result.py  config.py  openai.py  retrieval_strategy.py  summarize_content.py
cogniq/openai/: __init__.py  agent.py  api.py  ask.py  chat.py  cogniq_openai.py  config.py  history_augmented_prompt.py  openai.py  retrieval_augmentation.py  retrieval_strategy.py  slack_history.py  summarize_content.py  summarizer.py  web_qa_tool.py
cogniq/perplexity/: __init__.py  cogniq_perplexity.py
cogniq/personalities/: __init__.py  base_ask.py  base_personality.py
cogniq/personalities/banana/: __init__.py  ask.py  banana.py
cogniq/personalities/bing_search/: __init__.py  agent.py  ask.py  bing_search.py  config.py  custom_web_qa_pipeline.py  history_augmented_prompt.py  prompts.py  wake_pattern.py  web_qa_tool.py  web_retriever.py
cogniq/personalities/chat_anthropic/: __init__.py  ask.py  chat_anthropic.py  wake_pattern.py
cogniq/personalities/chat_gpt4/: __init__.py  ask.py  chat_gpt4.py  wake_pattern.py
cogniq/personalities/evaluator/: ask.py  evaluator.py  prompts.py
cogniq/personalities/perplexity/: perplexity.py
cogniq/personalities/slack_search/: __init__.py  ask.py  functions.py  prompts.py  slack_search.py
cogniq/personalities/task_manager/: functions.py  task_manager.py  task_store.py
cogniq/slack/: __init__.py  app_home_opened.py  app_mention.py  ask_openai.py  authorize.py  cogniq_slack.py  config.py  conversations_history.py  conversations_replies.py  errors.py  history.py  installation_store.py  message.py  search.py  slack.py  state_store.py
cogniq/slack/exceptions/: user_token_not_found.py
cogniq/slack/history/: anthropic_history.py  base_history.py  openai_history.py
cogniq/utils/: __init__.py  freezable_list.py  signals.py
cogniq/wandb/: __init__.py  childspan.py  run.py  span.py
deployments/cogniq-community-main/: AZURE_CHANGELOG.md  slack_manifest.json  slack_manifest.yaml
deployments/cogniq-ramtank-dev/: slack_manifest.yaml
deployments/example/: README.md  containerapp.yml  slack_manifest.json  slack_manifest.yaml
functions/: detect_lang.ts
