[tool.poetry]
name = "cogniq"
version = "0.1.0"
description = ""
authors = ["Jim Park <jim@ramtank.com>"]
license = "All Rights Reserved."
readme = "README.md"
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS"
]

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118/"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.10"
slack-bolt = "^1.18.0"
openai = "^0.27.6"
aiohttp = "^3.8.4"
tiktoken = "^0.4.0"

##
# Torch dependencies
# ------
# Pick one of the following two lines.
# If you have CUDA 11.8 installed (ie. Linux), use the the official pytorch source. Ensure that the pytorch source is uncommented above.
# If you do not have CUDA 11.8 installed (ie. OSX), use pypi.

torch = [ 
  { version = "2.0.1+cu118", source = "pytorch", markers = "sys_platform=='linux'"  },
  { version = "2.0.1", markers = "sys_platform=='darwin'" }
]
torchvision = [ 
  { version = "0.15.2+cu118", source = "pytorch", markers = "sys_platform=='linux'" },
  { version = "0.15.2", markers = "sys_platform=='darwin'" }
] 



multiprocess = "0.70.14"
# farm-haystack = { version = "1.16.1", extras = [] }
farm-haystack = { git = "https://github.com/CogniQ/haystack.git", branch = "v1.17.0-rc1", extras = [] }
tenacity = "^8.2.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

