[tool.poetry]
name = "cogniq"
version = "0.1.0"
description = ""
authors = ["Jim Park <jim@ramtank.com>"]
license = "All Rights Reserved."
readme = "README.md"
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS"
]

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118/"
priority = "explicit"

# Valid in Docker and in local installs.
[tool.poetry.dependencies]
python = "^3.10"
slack-bolt = "^1.18.0"
openai = "^0.27.6"
aiohttp = "^3.8.4"
tiktoken = "^0.4.0"
multiprocess = "0.70.14"
tenacity = "^8.2.2"
python-dotenv = "^1.0.0"
uvicorn = "^0.22.0"
fastapi = "^0.96.0"
slack-sdk = "^3.21.3"
databases = {extras = ["postgresql"], version = "^0.7.0"}
psycopg2 = "^2.9.6"
aiosqlite = "^0.19.0"

[tool.poetry.group.localinstall]
# Only necessary when installing locally.
optional = true

[tool.poetry.group.localinstall.dependencies]
torch = [ 
  { version = "2.0.1+cu118", source = "pytorch", markers = "sys_platform=='linux'"  },
  { version = "2.0.1", markers = "sys_platform=='darwin'" }
]
torchvision = [ 
  { version = "0.15.2+cu118", source = "pytorch", markers = "sys_platform=='linux'" },
  { version = "0.15.2", markers = "sys_platform=='darwin'" }
] 
farm-haystack = { version = "1.17.2", extras = [] }


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 140

[tool.mypy]
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
plugins = [
  "pydantic.mypy",
]
