[tool.poetry]
name = "cogniq"
version = "0.1.0"
description = ""
authors = ["Jim Park <jim@ramtank.com>"]
license = "All Rights Reserved."
readme = "README.md"
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS"
]

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118/"
priority = "explicit"

# Valid in Docker and in local installs.
[tool.poetry.dependencies]
python = "~3.10"
slack-bolt = "^1.18.0"
openai = "^0.28.0"
aiohttp = "^3.8.5"
tiktoken = "~0.4.0"
multiprocess = "^0.70.15"
tenacity = "~8.2.3"
python-dotenv = "~1.0.0"
uvicorn = "~0.23.2"
fastapi = "~0.103.1"
slack-sdk = "~3.21.3"
databases = {extras = ["postgresql"], version = "^0.7.0"}
psycopg2 = "~2.9.7"
aiosqlite = "~0.19.0"
ddtrace = "~1.18.4"

[tool.poetry.group.localinstall]
# Only necessary when installing locally.
optional = true

[tool.poetry.group.localinstall.dependencies]
torch = [ 
  { version = "2.0.1+cu118", source = "pytorch", markers = "sys_platform=='linux'"  },
  { version = "2.0.1", markers = "sys_platform=='darwin'" }
]
torchvision = [ 
  { version = "0.15.2+cu118", source = "pytorch", markers = "sys_platform=='linux'" },
  { version = "0.15.2", markers = "sys_platform=='darwin'" }
] 
farm-haystack = { version = "1.20.0", extras = ["preprocessing"] }
setuptools = "^68.2.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 140

[tool.mypy]
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
plugins = [
  "pydantic.mypy",
]
